index.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');

:root {
  --main-color: #647bff;
  --body-color: #09172a;
  --body-color-faded: #09172ae6;
  --text-color: #e7e8ea;
  --accent-color: #d6336c;
  --accent-color-darker: #ab2956;
  --accent-color-faded: #d6336c33;
  --success-color: #3ecc71;
  --error-color: #e74c3c;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
::-webkit-scrollbar {
  display: none;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
  scroll-padding-top: 2rem;
}
body {
  height: 100vh;
  font-size: 1.6rem;
  font-family: 'Lato', sans-serif;
  background-color: var(--body-color);
  color: var(--text-color);
  position: relative;
}
img {
  width: 100%;
}
section {
  padding: 6rem 0 2rem;
}
a {
  text-decoration: none;
}
li {
  list-style: none;
}
ion-icon {
  color: var(--accent-color);
}

.accent {
  color: var(--accent-color);
}

.container {
  max-width: 96rem;
  margin: auto;
  width: 100%;
}
.container--wide {
  max-width: 110rem;
}

/* Header Styles */
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  background-color: var(--body-color-faded);
}
.nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 4rem 0;
  background-color: var(--body-color-faded);
}
.logo {
  font-size: 2.4rem;
  font-weight: 700;
}

.nav-links {
  display: flex;
  align-items: center;
  gap: 1.5rem;
}
.nav-link {
  padding: 0.4rem 0.8rem;
  border-radius: 0.2rem;
  color: var(--text-color);
  letter-spacing: 0.15rem;
  font-size: 1.8rem;
}
.nav-link:hover {
  color: var(--accent-color);
  transition: 0.3s;
}
.res-link {
  border: 1px solid var(--text-color);
  border-radius: 5px;
  padding: 0.6rem 1.2rem;
}
.res-link:hover {
  border-color: var(--accent-color);
}
/* Menu Icon */
.menu-icon {
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  z-index: 200;
  transition: 0.3s;
}
.menu-icon div {
  display: block;
  background: var(--text-color);
  height: 2px;
  width: 24px;
  transition: 0.3s;
}
.move .line1 {
  transform: rotate(-45deg) translate(-5px, 5px);
}
.move .line2 {
  opacity: 0;
}
.move .line3 {
  transform: rotate(45deg) translate(-5px, -5px);
}

/* Home section */
.home {
  min-height: 60rem;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 20rem;
}
.home-content {
  max-width: 60rem;
  width: 100%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.home-img {
  width: 25rem;
  height: 25rem;
  border-radius: 50%;
  background-color: var(--accent-color);
  overflow: hidden;
  margin-bottom: 2rem;
}

.home-img {
  width: 25rem;
  height: 25rem;
  object-fit: cover;
  object-position: center;
}

.home-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.home-text p:nth-of-type(1) {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-size: 1.8rem;
  color: var(--accent-color);
}

.home-text h1 {
  font-size: 3.6rem;
  line-height: 4.8rem;
}

.home-text h2 {
  font-size: 3.2rem;
  margin-bottom: 0.5rem;
}
.home-text p:nth-of-type(2) {
  font-size: 2rem;
  line-height: 1.4;
  letter-spacing: 1px;
  margin-bottom: 2rem;
}

/* Social Links */
.social-links {
  display: flex;
  align-items: center;
  gap: 2.4rem;
}
.social-links ion-icon {
  font-size: 3.2rem;
}

/* Heading */
.heading {
  font-size: 5rem;
  font-weight: 900;
  text-transform: uppercase;
  text-align: center;
  color: var(--accent-color-faded);
  margin-bottom: 2rem;
}

/* About content */
.about-content {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}
.about-data span {
  font-size: 2rem;
  font-weight: 700;
  text-transform: uppercase;
  color: var(--accent-color);
}
.about-data h2 {
  font-size: 3rem;
  line-height: 3.2rem;
  font-weight: 700;
  margin: 2rem 0;
}
.download-btn {
  font-size: 1.8rem;
  display: inline-flex;
  align-items: center;
  gap: 0.5rem;
  color: var(--text-color);
  background: var(--accent-color);
  padding: 12px 16px;
  border-radius: 5px;
  margin-top: 2rem;
}
.download-btn ion-icon {
  color: var(--text-color);
  font-size: 2.2rem;
}
.download-btn:hover {
  background-color: var(--accent-color-darker);
  transition: 0.3s;
}
.download-btn:active {
  transform: scale(0.95);
}
.about-text p {
  font-size: 2rem;
  letter-spacing: 1px;
  line-height: 1.4;
  text-align: justify;
  margin: 1.5rem 0;
}

/* Projects Section */
.projects-content {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 2rem;
}

.project-box {
  position: relative;
  width: 100%;
  height: 32rem;
  border-radius: 1rem;
  overflow: hidden;
}
.project-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}
.project-overlay {
  position: absolute;
  top: -100%;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  background: hsl(234, 45%, 16%, 0.7);
}
.project-overlay h2 {
  font-weight: 900;
  letter-spacing: 0.5px;
}
.project-box:hover .project-overlay {
  top: 0;
  transition: 0.3s;
}
.project-links {
  display: flex;
  align-items: center;
  gap: 1rem;
}
.project-links a:nth-of-type(1) {
  transform: rotate(-45deg);
}
.project-links ion-icon {
  font-size: 3.2rem;
}
.project-links ion-icon:hover {
  color: var(--accent-color-darker);
  transition: 0.3s;
}

/* Contact Form */

.form {
  max-width: 70rem;
  margin: auto;
  width: 100%;
}
.form p {
  text-align: center;
  font-size: 2rem;
  line-height: 1.4;
  letter-spacing: 1px;
  margin-bottom: 2rem;
}

.form-control {
  width: 100%;
  padding-bottom: 2rem;
  position: relative;
}

.form-control label,
.form-control input,
.form-control small,
.form-control textarea {
  display: block;
  width: 100%;
}

.form-control label {
  margin-bottom: 0.8rem;
  font-size: 2rem;
  color: var(--accent-color);
}

.form-control input,
.form-control textarea {
  border: 0.2rem solid #f0f0f0;
  border-radius: 4px;
  padding: 1rem;
  font: inherit;
  font-size: 1.8rem;
}

.form-control input:focus,
.form-control textarea:focus {
  outline: 0;
}

.form-control.success input,
.form-control.success textarea {
  border-color: var(--success-color);
}

.form-control.error input,
.form-control.error textarea {
  border-color: var(--error-color);
}

.form-control small {
  font-size: 1.4rem;
  color: var(--error-color);
  position: absolute;
  bottom: 0;
  left: 0;
  visibility: hidden;
}

.form-control.error small {
  visibility: visible;
}

.form textarea {
  resize: none;
}

.form button {
  cursor: pointer;
  background-color: var(--accent-color);
  color: var(--text-color);
  border: 0;
  border-radius: 5px;
  display: block;
  font-size: 1.8rem;
  font-weight: 700;
  padding: 12px 16px;
  margin-left: auto;
}

.form button:hover {
  background-color: var(--accent-color-darker);
  transition: 0.3s;
}

/* Back to top arrow button */
.up-arrow {
  position: fixed;
  bottom: 5rem;
  right: 5rem;
  font-size: 4rem;
  color: var(--accent-color);
  visibility: hidden;
  opacity: 0;
  transition: visibility 0.3s, opacity 0.3s linear;
}

.up-arrow.active {
  visibility: visible;
  opacity: 1;
  cursor: pointer;
}

